2000-08-01  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC): Also try to find $target_alias-cc.

2000-08-01  Akim Demaille  <akim@epita.fr>

	AC_VALIDATE_CACHED_SYSTEM_TUPLE no longer works properly since the
	AC_CANONICAL_* revamping.
	Reported by Peter Eisentraut.
	In fact, let's just use the precious variables handling.

	* acgeneral.m4 (AC_VALIDATE_CACHED_SYSTEM_TUPLE): Obsoleted.
	(_AC_ARG_VAR_PRECIOUS): New macro, eved from...
	(AC_ARG_VAR): this macro.  Adjust.
	(_AC_INIT_PREPARE): `build_alias', `host_alias', and
	`target_alias' are precious.
	* doc/autoconf.texi: Adjust.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT): Neutralize also
	LC_COLLATE and LC_NUMERIC.
	* autoconf.m4: Don't rely on character ranges with tr.
	* doc/autoconf.texi (Special Shell Variables): Adjust.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (_AC_LIBOBJ_STRTOD, AC_FUNC_STRTOD,
	AM_FUNC_STRTOD): New macros, from Automake.
	* acfunctions: Adjust.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* acidentifiers: Catch ptrdiff_t.
	* acspecific.m4 (AM_TYPE_PTRDIFF_T): AU define.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* autoscan.pl: Be ready to handle AC_CHECK_TYPES requests.
	Quote properly the output.
	Remove useless backslashes.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_ONSTACK): New macro, from
	Automake.
	* doc/autoconf.texi (Particular Functions): Adjust.

2000-08-01  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_ERROR_AT_LINE): New macro, from
	Automake.
	* doc/autoconf.texi (Particular Functions): Adjust.

2000-08-01  Akim Demaille  <akim@epita.fr>

	Create acfunctions.m4, in charge of the macros related to
	functions.

	* acgeneral.m4 (AC_CHECK_FUNC, AC_CHECK_FUNCS, AC_REPLACE_FUNCS):
	Move to...
	* acfunctions.m4: here, new file.
	* acspecific.m4 (_AC_LIBOBJ_ALLOCA, AC_FUNC_ALLOCA, AC_FUNC_CHOWN,
	AC_FUNC_CLOSEDIR_VOID, AC_FUNC_FNMATCH, AC_FUNC_GETGROUPS,