@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.022.
-.TH AUTOHEADER "1" "July 2000" "GNU autoconf 2.14a" FSF
+.TH AUTOHEADER "1" "August 2000" "GNU autoconf 2.14a" FSF
 .SH NAME
 autoheader \- Create a template header for configure
 .SH SYNOPSIS
