@@ -1,5 +1,10 @@
 2000-08-01  Akim Demaille  <akim@epita.fr>
 
+	* autoheader.sh (_ac_warnings): Be robust to LC_COLLATE.
+	`IFS=,; echo ,' will give a comma.  Take this into account.
+
+2000-08-01  Akim Demaille  <akim@epita.fr>
+
 	* aclang.m4 (AC_PROG_CC): Also try to find $target_alias-cc.
 
 2000-08-01  Akim Demaille  <akim@epita.fr>
